佈告欄內文新增刊登時間 #20210330

--- a/jp/bulletin/article-events-3.html
+++ b/jp/bulletin/article-events-3.html
@@ -297,6 +297,8 @@
                                 </div>
                                     
                             </div><!--//end #bulletin-main-->
+
+                            <div class="published-time">掲載時間：2021-03-30</div>
                         
                             <div id="down-option">
                                 <div id="bulletin-annex">
