--- a/jp/bulletin/article-events-2.html
+++ b/jp/bulletin/article-events-2.html
@@ -304,6 +304,8 @@
                                 </div>
                                     
                             </div><!--//end #bulletin-main-->
+
+                            <div class="published-time">掲載時間：2021-03-30</div>
                         
                             <div id="down-option">
                                 <div id="bulletin-annex">
