--- a/jp/bulletin/article-events.html
+++ b/jp/bulletin/article-events.html
@@ -314,6 +314,7 @@
                                 
                             </div><!--//end #bulletin-main-->
                             
+                            <div class="published-time">掲載時間：2021-03-30</div>
 
                             <div id="down-option">
                                 <div id="bulletin-annex">
