--- a/jp/bulletin/article-news-2.html
+++ b/jp/bulletin/article-news-2.html
@@ -285,6 +285,8 @@
                                 </div>    
                             
                             </div><!--//end #bulletin-main-->
+
+                            <div class="published-time">掲載時間：2021-03-30</div>
                             
                             <div id="down-option">
                                 <!--
