--- a/jp/academic-resources/cta.html
+++ b/jp/academic-resources/cta.html
@@ -266,9 +266,9 @@
                         <section id="box-academic">
                             <div id="academic-main">
                                 <img class="pic_museum" src="../../images/pic_cat.jpg" alt="台湾考古館">
-                                <p>台湾考古館は⼆棟造りの建物であり、⼀つ⽬の建物が1958年に建てられたので、当院が南港に移動した後の最初の建築物の⼀つです。⼆つ⽬の建物は、1968年から何度かに渡る増築⼯事を経て完成しました。2008年に改築⼯事が始まり、2012年に竣⼯しました。 </p>
-                                <p>当館は、以前は考古学⾨の拠点及び中原考古⽂物の集積所でしたが、1970年代初期に、本所における台湾考古標本の収集が始まりました。1980年代以降現在でも、考古学⾨の研究者達が積極的に台湾・澎湖・金門・馬祖、及び東南アジア地域での考古調査と発掘作業を推進し、遺跡保存・史跡調査にも参加しています。現在まで、多くの考古遺物・フィールドワーク記録及び研究成果を積み重ねてきました。 </p>
-                                <p>当館は、学術研究を⽀援するために設⽴されました。館内は標本倉庫・作業室・科学技術考古試験室などが配置され、考古資料の整理・分類・鑑定・物理や化学分析・デジタル化などの作業が⾏われています。その他に、展⽰の要求に応じて重要な標本を選ぶことの⽀援、加えて、社会教育施設と共に台湾史前⽂化教育を広めるイベントを開催することがあります。 </p>
+                                <p>台湾考古館は二棟造りの建物からなっています。一つ目の建物は1958年に建てられたもので、当院が南港に移動した後の最初の建築物の一つです。二つ目の建物は、1968年から何度かに渡る増築工事を経て完成しました。2008年には、再度改築工事が始まり、2012年7月に竣工しました。</p>
+                                <p>当館は、以前は考古学門の拠点であり、また中原考古文物の保存・陳列の場所でしたが、1970年代初期には、本所において台湾考古標本の収集が始まりました。1980年代以降、考古学門の研究者達は、台湾、澎湖、金門、馬祖、及び東南アジア地域での考古調査と発掘作業を積極的に推進し、遺跡保存・史跡調査に参加しました。それにより、現在に至るまで、多くの考古遺物やフィールドワーク記録及び研究成果が積み重ねられてきました。</p>
+                                <p>当館は、こうした学術研究を支援するために設立されたものです。館内には、標本倉庫、作業室、考古科学実験室などが配置され、考古資料の整理、分類、鑑定、物理・化学分析、デジタル化などの作業が行われています。その他、各種展示の要請に応じて、重要な標本の選定を支援したり、社会教育施設による台湾先史文化を広める教育活動に協力したりしています。</p>
                             </div><!--//end #bulletin-main-->
                         </section>
                     </div><!--//end #page-main-->
