--- a/jp/academic-resources/ihp-archives.html
+++ b/jp/academic-resources/ihp-archives.html
@@ -266,8 +266,8 @@
                         <section id="box-academic">
                             <div id="academic-main">
                                 <img class="pic_archives" src="../../images/pic_ihp-archives.jpg" alt="档案館三字用書法寫">
-                                <p>本所が成⽴されて以降、各分野の研究者らが積極的に研究関係⽂物・図書・アーカイブを収集してきました。これらの史料が、傅斯年図書館・考古館・研究機関に収蔵されております。</p>
-                                <p>2001年から、本所の所蔵資料、例えば考古・拓本・善本古典籍・少数⺠族⽂物・内閣⼤庫档案のデジタル化が続々と完成されました。将来、本所の全てにアーカイブのデジタルファイルと関係作業を統合し、協⼒するために、2014年10⽉に「档案館」が設置されました。本所所蔵資料のデジタル化を推進し、アーカイブ上のシステム管理と維持を⾏う上で、新しいアーカイブも収集し続けております。現在、当館の主要作業とは、本所成⽴以来の各種に渡る学術・事務・庶務⽂書を整理することです。 </p>
+                                <p>本所の創立以降、各分野の研究者らが積極的に収集した、研究に関係する文物、図書、檔案等の史料は、傅斯年図書館や考古館、各研究機関に収蔵されてきました。</p>
+                                <p>2001年からは、本所の所蔵資料、例えば考古物、拓本、善本古典籍、少数民族文物、内閣大庫檔案のデジタル化が次々と完成しました。将来的に、本所の各所が所蔵する文献資料とそのデジタル・アーカイブを統括し、連携させていくために、2014年10月に「歴史資料館（档案館）」が設置されました。本館は、本所所蔵資料のデジタル化を推進し、アーカイブのシステム管理と維持を行う一方で、新しい資料も収集し続けています。現在、当館の主要作業は、本所成立以来の各種に渡る学術・事務・庶務文書の整理を中心としています。</p>
                             </div><!--//end #bulletin-main-->
 
                             <div class="other-links">
