--- a/jp/academic-resources/ihp-museum.html
+++ b/jp/academic-resources/ihp-museum.html
@@ -266,9 +266,9 @@
                         <section id="box-academic">
                             <div id="academic-main">
                                 <img class="pic_museum" src="../../images/pic_ihp-museum.jpg" alt="歷史文物陳列館內部">
-                                <p>本所所蔵の⽂物は合計14万件余りであり、その中には、本所が⼤陸時期で発掘・採集した考古遺物約12万件余りが含まれています。他には、居延漢簡約1万件、中国少数⺠族⽂物と⽂書が2千点余りあります。他にも、内閣⼤庫明清檔案約31万件が収蔵されています。 </p>
-                                <p>それらの所蔵を展⽰するために、1986年から歴史⽂物陳列館が設置されました。1997年に⼀旦閉館し、増改築⼯事が⾏われました。2002年再開館以降、⽂物展⽰と主催したイベントを通じて、本所と社会⼤衆交流の窓⼝になっております。</p>
-                                <p>館内の展⽰は、伝統的な博物館で使った展⽰品のみ陳列することから変わり、学術研究成果を中⼼として展⽰されています。したがって、⼀階の「考古空間」は時代別に、中国殷商・⻄周から春秋戦国時代まで、各時期の遺跡や墓葬から出⼟した資料を展⽰しております。⼆階の「歴史空間」は⽂献資料などの史料を種類別に展⽰しており、居延漢簡、珍蔵図書、内閣⼤庫檔案、中国⻄南⺠族の⺠族⾐装や⼯芸品、⻄周時代から宋代に⾄るまでの拓本資料、台湾史関連資料という六つの主題コーナーから構成されております。 </p>
+                                <p>本所所蔵の文物は合計14万件余りであり、その中には、本所が大陸時期に発掘・採集した、考古遺物約12万件余りが含まれています。その他、居延漢簡約1万件、中国少数民族文物・文書が2千点余りあります。また、内閣大庫明清檔案約31万件が収蔵されています。</p>
+                                <p>これらの所蔵品を展示するために、1986年より歴史文物陳列館が設置されました。1997年には一旦閉館し、増改築工事が行われています。2002年の再開館以降、所蔵品展示と主催イベントを通じて、本所と一般市民との交流の窓口となっています。</p>
+                                <p>館内の展示は、名品を陳列するという伝統的な博物館の概念とは異なり、学術研究成果をその中心としているため、本館は「学術的博物館」と称されています。一階の「考古空間」は、中国殷商・西周から春秋戦国時代までの、各時代の遺跡や墳墓から出土した資料を展示しています。二階の「歴史空間」は、文献資料などの史料を種類別に展示しており、居延漢簡、珍蔵図書、内閣大庫檔案、中国西南民族の民族衣装や工芸品、西周時代から宋代に至るまでの拓本資料、台湾史関連資料という、六つのテーマ・コーナーから構成されています。また、当館は、不定期に各種の特別展や一般向け講演会を企画し、本所の歴史研究の成果を一般社会に還元しています。 </p>
                             </div><!--//end #bulletin-main-->
 
                             <div class="other-links">
