--- a/jp/outreach/fu-ssu-nien-scholarship.html
+++ b/jp/outreach/fu-ssu-nien-scholarship.html
@@ -272,12 +272,12 @@
                     <div id="page-main">
                         <section id="box-outreach">
                             <div id="outreach-info">
-                                <p>中央研究院の創立者・元所⻑である傅斯年氏を記念するため、1951年に「傅中央研究院の創立者・元所⻑である傅斯年氏を記念するため、1951年に「傅斯年奨学金」制度を創設しました。成績優秀であり、歴史学・言語学・考古学・人類学の研修を目指す大学生(二年生以上)、および、大学院生を対象とした奨学金を支給します。優秀な学生が人文科学を研修することを奨励するため、本所は何度か支給金額と定員の規則を見直しました。2019年から現在まで、毎回最大定員を2名とし、一人につき奨学金10万元を支給します。</p>    
+                                <p>中央研究院の創立者・元所長である傅斯年氏を記念するため、1951年に「傅斯年奨学金」制度が創設されました。成績優秀な、歴史学、言語学、考古学、人類学の研究や学習を志す大学生（二年生以上）、および大学院生を対象とした奨学金を支給しています。優秀な学生が人文科学を学ぶことを奨励するため、本所は何度か支給金額と定員の規則を見直してきました。2019年からは、毎年最大定員を2名とし、一人につき奨学金10万元を支給しています。</p>    
                             </div> 
                             
                             <div id="outreach-main">
                                 <div id="awards-list">
-                                    <h3><span>過去における、各回ごとの奨学金合格者リスト</span>(合格順ではありません)</h3>
+                                    <h3><span>歴代奨学金獲得者リスト</span>（順序は合格成績ではありません）</h3>
                                     <details class="awards-item" open><!---預設折疊區塊打開要加上open-->
                                         <summary>101-108 學年度</summary>
                                         <ul>
