--- a/jp/outreach/huang-chang-chien-academic-research-scholarship.html
+++ b/jp/outreach/huang-chang-chien-academic-research-scholarship.html
@@ -272,14 +272,14 @@
                     <div id="page-main">
                         <section id="box-outreach">
                             <div id="outreach-info">
-                                <p>⻩彰健院士(1919-2009)、本所の助手員・助手研究員・副研究員・専任研究 員・特別名誉研究員紹介・兼任研究員を歴任しました。</p>
-                                <p>同氏の一生の重要学術研究成果と言えば、漢籍考訂の学・学術思想史・明清 史研究などであり、著作は『明実録校勘記』など十一種の著書、及び論文約 100篇があります。同氏は1982年に中央研究院院士に当選しました。</p>
-                                <p>⻩氏の生涯における学術貢献を記念するため、同氏の家族により2010年か ら、本所で「⻩彰健院士学術研究奨学金」制度を設立しました。国内各大学 に在学中、中華⺠国国籍を持ち、中国上古史・宋明文化思想・清末⺠初歴史 の研究分野を目指す院生および、博士院生を優先対象とした者に対し支給し ます。現在、毎年定員3名に対し、一人につき奨学金2500アメリカドルを支給 します。</p>    
+                                <p>黄彰健院士（1919-2009）は、本所の助手、助研究員、副研究員、専任研究員、通信研究員、兼任研究員を歴任しました。</p>
+                                <p>同氏の生涯における重要な学術研究成果として、漢籍考訂、学術思想史、明清史研究などがあり、その著作として、『明実録校勘記』などの著書11点、論文約100篇があります。同氏は1982年に中央研究院院士に選出されました。</p>
+                                <p>黄彰健氏の生涯における学術的貢献を記念するため、同氏の家族により、2010年から本所に「黄彰健院士学術研究奨学金」制度が設立されました。国内の大学に在学中で中華民国籍を持ち、中国上古史、宋明文化思想、清末民初の歴史に関する研究分野を志す、修士および博士の大学院生を優先対象として支給されます。現在、毎年定員3名に対し、一人につき奨学金2500アメリカドルが支給されています。</p>    
                             </div> 
                             
                             <div id="outreach-main">
                                 <div id="awards-list">
-                                    <h3><span>過去における、各回ごとの奨学金合格者リスト</span>(合格順ではありません)</h3>
+                                    <h3><span>歴代奨学金獲得者リスト</span>（順序は合格成績ではありません）</h3>
                                     <details class="awards-item" open><!---預設折疊區塊打開要加上open-->
                                         <summary>2020-2021</summary>
                                         <ul>
