--- a/jp/outreach/international-scholarly-cooperation-and-exchanges.html
+++ b/jp/outreach/international-scholarly-cooperation-and-exchanges.html
@@ -272,8 +272,8 @@
                     <div id="page-main">
                         <section id="box-outreach">
                             <div id="outreach-info">
-                                <p>他の学術機関との交流を強化し、研究人員の学術訪問や見学・協力機会を増やし、そして国際競争力を高めるため、本所と数多くの外国大学や研究機構との間で、学術協力・図書文献交流に関する協定を締結しました。<br>
-                                （現在有効な交流協定の詳細な内容は、以下のフォームに記載されています）</p>    
+                                <p>他の学術機関との交流を強化し、研究人員の学術訪問や見学、研究協力の機会を増やし、国際競争力を高めるため、本所は数多くの海外の大学・研究機構との間で、学術協力・図書文献交流に関する協定を締結しています。</p>
+                                <p>現在締結中の交流協定の詳しい内容は、以下の表に記載されています。</p>    
                             </div> 
                             
                             <div id="outreach-main">
