--- a/jp/working-groups/ancient-civilizations.html
+++ b/jp/working-groups/ancient-civilizations.html
@@ -286,13 +286,13 @@
                                 <p>オーガナイザー・担当者：<span><a href="../people/research-fellows-info01.html" title="プロフィール">黃銘崇</a></span></p>
                             </div>
 
-                            <p>当室の設立主旨とは、上古史の研究を盛んにすることです。目標とは</p>
+                            <p>当室の設立主旨は、上古史研究の活性化にあります。その目標として、以下のことが挙げられます。</p>
                                 
-                            <p>一、 上古史研究の新しいテーマを開拓すること<br>
-                                二、若い研究人材を育成するこ と<br>
-                                三、クロスカルチャーの比較研究</p>
+                            <p>一、 上古史研究の新しいテーマの開拓<br>
+                                二、若い研究人材の育成<br>
+                                三、クロスカルチャーを基にした比較研究の推進</p>
                             
-                            <p>それとともに、研究グループとパイロットプロジェクトなどの方法を通じ、 本所・当院・院外における関係領域の専門研究者達を招集し、討論・対話・ 講演会をきっかけに、お互いの理解を高めます。これらの活動を触媒のよう な効果にするため、新しいテーマの開拓及び共通の研究への興味を引き出す 上で、中国上古史に関する新たな研究を展開することを目指しています。</p>
+                            <p>また、研究グループやパイロットプロジェクトなどの方法を通じ、多くの本所研究員や、院内外の関係領域の研究者たちが、討論や対話、講演会などを通して、互いの理解を深めることを目指しています。これらの活動を触媒とし、新しい研究テーマの開拓及び共通の研究課題への関心を引き出し、中国上古史に関する新たな研究が展開されることを目指しています。</p>
 
                             <!-- 沒有連結時隱藏
                             <div class="other-links">
