--- a/jp/working-groups/cultural-and-intellectual-history.html
+++ b/jp/working-groups/cultural-and-intellectual-history.html
@@ -286,7 +286,7 @@
                                 <p>オーガナイザー・担当者：<span><a href="../people/research-fellows-info01.html" title="プロフィール">邱仲麟</a></span></p>
                             </div>
 
-                            <p>当研究室の主要なメンバーは、本所の研究者の中で、研究分野が思想文化史 に関する学者達です。様々な研究範囲に関わる学者達を集め、歴史上の重要 な思想史・文化史・心性史の中における問題を研究します。様々な専門的視 点から、各時代に詳しい専門家達の力を合わせ、研究協力を求めます。その 上で、思想文化史領域の新しいテーマを開拓する一方、原始史料の収集範囲 も広めたいと思います。</p>
+                            <p>当研究室は、思想文化史に関係する本所の研究員を主要メンバーとし、様々な研究範囲に関わる学者らを集めることで、歴史上の重要な思想史、文化史、心性史における問題を研究しています。様々な専門的視点から、各時代に詳しい専門家達の力を合わせ、研究協力を進めています。また、思想文化史領域における新しいテーマを開拓する一方、広範囲に渡る一次史料の収集を行っています。</p>
 
                             <div class="other-links">
                                 <span>関連リンク：</span>
