--- a/jp/working-groups/custom-religion-and-daily-life.html
+++ b/jp/working-groups/custom-religion-and-daily-life.html
@@ -286,7 +286,7 @@
                                 <p>オーガナイザー・担当者：<span><a href="../people/research-fellows-info01.html" title="プロフィール">廖宜方</a></span></p>
                             </div>
 
-                            <p>当研究室における、礼儀・習俗・宗教に深く興味を持つ研究者同僚達を集め、 共同研究・討論・新テーマを開拓します。歴史上の宗教・日常生活の習慣・ 行事などを主要な対象として研究を行います。それと同時に、現代社会の宗 教・習慣に基づいて古代宗教を解析します。</p>
+                            <p>当研究室では、儀礼・習俗・宗教に深く関心を持つ研究員らを集め、共同研究や討論、新しい研究テーマの開拓を行っています。歴史上の宗教や日常生活における習俗を研究するのと同時に、現代社会における宗教や習俗についても、古代の宗教を理解する重要な基礎と見なしています。</p>
 
                             <div class="other-links">
                                 <span>関連リンク：</span>
