--- a/jp/working-groups/digital-humanities.html
+++ b/jp/working-groups/digital-humanities.html
@@ -288,10 +288,10 @@
 
                             <p>設立日：2014/1/1</p>
                                 
-                            <p>情報と通信技術の急速な発展・活用は「デジタル革命」を引き起こした故に、 人文科学研究者達にとっては、社会や文化の環境も天地が逆転するような変 化が発生しました。この中で、使い慣れたリサーチツール・研究方法・問題 への観念的な構成・学術研究における質の判定基準などの事に、日々挑む事 に直面しています。いわゆる、人文研究の「パラダイムシフト」を行っていま す。これからの時代は、当研究室におけるデジタル科学専門家と人文領域の 科学者の協力に基づく、デジタル技術・デジタルコンテンツを使って人文学 研究を推進し、新しい研究模範を示すようになります。さらに、デジタル科 学技術が人類の社会と文明に与える衝撃を解析し、その上で対応策を考える ようになります。簡単にいえば、当室が以下の2種類の研究を推進し、協力し ます:</p>
+                            <p>情報・通信技術の急速な発展と運用は、いわゆる「デジタル革命」を引き起こし、人文科学研究者達が住まう社会や文化の環境にも、天地が逆転するかのような変化が生じました。使い慣れたリサーチツールや研究方法、さらには問題を思考する概念構造、学術研究における質の判定基準といった事柄においてさえ、日々増加する難題に直面しており、人文研究の「パラダイムシフト」は現在進行中であると言えるでしょう。そのため、当研究室は、デジタル科学の専門家と人文学領域の学者らをの協力に基づき、デジタル技術やデジタルコンテンツを使って、いかに人文学研究を推進していくかを検討し、新しい研究模範の確立に努めています。さらに、デジタル科学技術が人類の社会と文明に与える衝撃を解析し、その対応策を検討していきます。まとめると、当研究室では、以下の2種類の研究の推進・協力を行っています。</p>
                             
-                            <p>その一、デジタル技術・デジタルコンテンツを使い人文学研究を行うこと</p>
-                            <p>その二、デジタル技術が社会に与える衝撃と、その対応策を探索すること。</p>
+                            <p>一、デジタル技術・デジタルコンテンツを使った人文学研究の推進</p>
+                            <p>二、デジタル技術が社会に与える衝撃と、その対応策の検討</p>
 
                             <div class="other-links">
                                 <span>関連リンク：</span>
