--- a/jp/working-groups/geographical-information-systems.html
+++ b/jp/working-groups/geographical-information-systems.html
@@ -286,9 +286,9 @@
                                 <p>オーガナイザー・担当者：<span><a href="../people/research-fellows-info01.html" title="プロフィール">范毅軍</a></span></p>
                             </div>
 
-                            <p>地理情報システム(Geographical Information System)は、1970年代末から 盛んになりました。現在まで、応用科学業界・政府・工業・商業界で使われ、国土資源調査の分析・地籍調査管理・商工業活動でのエリアマーケティング ツールなどに使用されています。そして近年では、人文社会科学界も、当システムが人文科学研究領域に利用されている効果を重視し、理解しています。</p>
+                            <p>地理情報システム（Geographical Information System）は、1970年代末から盛んになりました。現在までに、応用科学界や政府、工業、商業界で使われ、国土資源調査の分析、地籍調査管理、商工業活動におけるエリアマーケティングツールなどに使用されています。そして、近年では、人文社会科学界においても、このシステムの研究領域における有用性について理解が進み、重視されるようになっています。</p>
                                 
-                            <p>当研究グループでは、GISソフトウェア・デジタルタブレット・パソコンな ど基礎的なハードウェア及びソフトウェア設備が整っています。当システム のメイン機能は三つあり:その一、現有の紙地図・人工衛星が撮影する画像・実地測量などの方法を通じ、各種の比例尺度が異なるデジタル地図を作 成すること。その二、デジタル地図の補助を得て、科学技術の統合を求める こと。その三、GISシステムを利用して、地図の画像・空中写真及び人文科 学関係のデータベースを統合し、本所・当院における現有や将来のデータ ベースも含めて、多面的かつマルチプラットフォーム化された大型データ ベースを設置すること。このようなデータベースは、学術研究に役立つのみ ならず、教育の普及や国⺠の文化的教養の向上についても、一定の促進作用 があると思われます。</p>
+                            <p>当研究グループには、GISソフトウェア、デジタルタブレット、パソコンなどの、基礎的なハードウェア及びソフトウェア設備が整えられています。本システムのメイン機能は三つあり、（一）現有の紙地図や人工衛星が撮影する画像、実地測量などから、各種の比例尺度が異なるデジタル地図を作成すること。（二）デジタル地図を補助とし、各種の科学技術を総合した研究を進めること。（三）GISシステムを利用し、地図の画像や空中写真、及び人文社会科学関係の各種データベースを統合し、本所や当院他研究所における、既存のまたは今後構築されるデータベースも含め、多面的かつマルチプラットフォーム化された大型データベースを設置すること。このようなデータベースは、学術研究に役立つのみならず、教育の普及や国民の文化的教養の向上に対しても、一定の促進作用があると思われます。</p>
 
                             <!--沒有ウェブサイト就隱藏
                             <div class="other-links">
