--- a/jp/working-groups/grand-secretariat.html
+++ b/jp/working-groups/grand-secretariat.html
@@ -286,11 +286,11 @@
                                 <p>オーガナイザー・担当者：<span><a href="../people/research-fellows-info01.html" title="プロフィール">陳熙遠</a></span></p>
                             </div>
 
-                            <p>本所において所蔵する元清朝「内閣大庫档案」には、各文書およそ31万点が あります。この中には、詔令・題奏・移会・賀表・三法司案卷・実録稿本な ど、及び⻩冊・簿冊・内閣各庁房処・修書各館のアーカイブ・試題・試卷などが含まれます。これらは、明清時代政治制度・社会・経済・軍事・法律の 研究に関して、貴重な資料です。当アーカイブ室の資料は、元々清朝末期に 文書倉庫が壊れた時に移動されたものでしたが、持ち主が転々と変わりまし た。最終的には、本所の創立者である傅斯年先生と、その友人陳寅恪先生の 努力が叶えられ、相当な金額で購入されて本所所蔵となりました。</p>
+                            <p>本所が所蔵する清朝の「内閣大庫檔案」は、各文書およそ31万点があります。この中には、詔令、題奏、移会、賀表、三法司案巻、実録稿本、また各種の黄冊、簿冊、内閣各庁房処や修書各館の檔案、試題、試巻などが含まれます。これらは、明清時代の政治制度・社会・経済・軍事・法律の研究において、貴重な資料です。当室の資料は、元々清朝末期に文書倉庫が壊れた際に持ち出され、持ち主が転々と変わりました。最終的には、本所の創立者である傅斯年氏、および陳寅恪氏の努力によって、相当な金額で購入され、本所の所蔵となりました。</p>
 
-                            <p>1930年より、本所におけるこのアーカイブの整理作業が始まりました。1975 年まで、『明清史料』十編と『明清档案存真選集』三集が出版されました。 その中には、アーカイブ文書8000点ぐらいが含まれます。現在続けられてい る「内閣大庫明清アーカイブ整理・研究プロジェクト」は、1981年から始ま りました。整理作業の流れとは、虫の駆除・埃取り・破損した文書の修復・ 番号付けと登録・コピー・アーカイブを密封して保存・目録作成・複本の出 版などが含まれています。1995年の初めからは、アーカイブ管理を徹底する ために、整理の手続きが微調整され、番号付けの後、コンピューター登録作 業も開始されました。1996年から、複本のコピー作業が廃止され、その代わ りに、イメージスキャンファイルをディスクに保存する作業が始まりまし た。2000年からは国家デジタルコレクションプロジェクトに応じ、人名と地 名の典拠データを提供し始め、アーカイブ検索の正確度を高めました。</p>
+                            <p>1930年より、本所においてこの檔案の整理作業が始まり、1975年までに、『明清史料』十編と『明清檔案存真選輯』三集が出版されました。採録された文書は、8000点余りにのぼります。現在も続けられている「内閣大庫明清檔案整理研究プロジェクト」は、1981年から始まりました。整理作業の流れとしては、虫の駆除や埃取り、破損した文書の修復、番号付けと登録、複本の作成、原本の密封と保存、目録作成、複製本の出版などがあります。1995年の年初からは、アーカイブ管理を徹底するために、整理の手続きが微調整され、番号付けの後、コンピューター登録作業も開始されました。1996年からは、複本のコピー作業が廃止され、その代わりに、画像スキャンと、ファイルのディスク保存作業が始まりました。2000年からは、国家デジタルコレクションプロジェクトに合わせて、人名と地名の典拠データの提供を始め、アーカイブ検索の正確性を高めています。</p>
                                 
-                            <p>現在までの作業によると、当室で登録完成されたアーカイブ合計が27万点、 その内で要旨が付けられたアーカイブが17万4千点ぐらい、デジタル化された アーカイブが20万9千点ぐらいとなっています。なお、出版された『明清档 案』が370冊、合計5万点あまりです。1997年に、アーカイブの中から台湾関 係史料の要旨を提供し、台湾大学歴史学科が編集した『台湾史档案・目録』 の第13冊として出版しました。現在、全ての要旨とデジタルイメージが、イ ンターネットを通じて検索・閲覧・プリントアウトが可能です。</p>
+                            <p>現在までの作業によって、当室で登録が完了した檔案は、合計27万点で、その内要旨の付けられたものが17万4千点余り、デジタル化されたものが20万9千点余りとなっています。また、出版された『明清檔案』370冊には、合計5万点余りの文書が含まれます。1997年には、アーカイブの中から台湾関係史料の要旨を集め、台湾大学歴史学科が編集した『台湾史檔案・目録』の第13冊として出版されました。現在、全ての要旨とデジタルイメージが、インターネットを通じて検索・閲覧・プリントアウトが可能です。</p>
 
                             <div class="other-links">
                                 <span>関連リンク：</span>
