--- a/jp/working-groups/history-of-health-and-healing.html
+++ b/jp/working-groups/history-of-health-and-healing.html
@@ -286,7 +286,7 @@
                                 <p>オーガナイザー・担当者：<span><a href="../people/research-fellows-info01.html" title="プロフィール">李尚仁</a></span></p>
                             </div>
 
-                            <p>当研究室における様々な研究分野・所属の学者が集まり、「生命と医療」を核心テーマとして、新しい研究領域の開拓とともに、学界での、歴史上の各 時期中の様々な人類社会への総体認識を深めることを目指して努力していま す。そして、当室よりシンポジウムやセミナーなどの会議を主催し、各種類 の出版物を出版することに基いて、「生命・医療史」領域において主要な研 究センターの地位を確立させるものであります。</p>
+                            <p>当研究室では、様々な研究分野や所属の学者らが集まり、「生命と医療」を中心テーマとして、新しい研究領域の開拓し、学術界における各時代や人類社会への総合的な認識を深めることを目指しています。また、シンポジウムやセミナーの主催、各種の出版物の出版、長期に渡る研究資料の収集などによって、当研究室は「生命・医療史」領域における主要な研究拠点としての地位を確立しています。</p>
 
                             <div class="other-links">
                                 <span>関連リンク：</span>
