--- a/jp/working-groups/images-and-artifacts.html
+++ b/jp/working-groups/images-and-artifacts.html
@@ -286,7 +286,7 @@
                                 <p>オーガナイザー・担当者：<span><a href="../people/research-fellows-info01.html" title="プロフィール">石守謙</a></span></p>
                             </div>
 
-                            <p>当室の主要業務とは、本所所蔵の非文献資料(簡牘・碑の拓本・画像など) の整理及び出版・活用のことです。その他に当室では、新しい文物・図像資 料の収集も行い、本所研究者達の協力解読を経て、可能な研究テーマと領域 を開拓するものであります。</p>
+                            <p>当室の主要業務は、本所所蔵の非文献資料（簡牘、碑の拓本、図像等）を整理し、出版・活用することです。その他、当室では、新しい文物・図像資料の収集を行い、本所研究員らのグループによる解読を経て、今後可能な研究テーマを検討し、新しい研究領域を開拓しています。</p>
 
                             <div class="other-links">
                                 <span>関連リンク：</span>
