--- a/jp/working-groups/legal-history.html
+++ b/jp/working-groups/legal-history.html
@@ -286,8 +286,7 @@
                                 <p>オーガナイザー・担当者：<span><a href="../people/research-fellows-info01.html" title="プロフィール">劉欣寧</a></span></p>
                             </div>
 
-                            <p>当研究室の目的は伝統的な社会法制の研究。つまり、法律と家庭・社会・国 家及び文化との関係を中心として研究を行います。学際研究という方法を中 心に、学科・研究所・学院・学校の枠を超え、統合的な学際性協力研究を推 進します。
-                            </p>
+                            <p>当研究室の目的は、伝統社会における法制の研究を推進し、法律と家庭、社会、国家及び文化との関係を中心として研究を行うことです。学科や研究所、研究院、学校の枠を超え、統合的な学際研究を推進しています。</p>
 
                             <div class="other-links">
                                 <span>関連リンク：</span>
