--- a/jp/working-groups/scripta-sinica.html
+++ b/jp/working-groups/scripta-sinica.html
@@ -286,15 +286,9 @@
                                 <p>オーガナイザー・担当者：<span><a href="../people/research-fellows-info01.html" title="プロフィール">李仁淵</a></span></p>
                             </div>
 
-                            <p>1984年、情報科学研究所の謝清俊氏の提案をきっかけに、歴史言語研究所の 所⻑丁邦新氏の支持を得て、毛漢光氏が担当し、多くの研究者達による「史 籍自動化」というプロジェクトが始まりました。それからの10年間で、『二 十五史』と39種類の古籍のデータベース登録、4,800万字のタイプ作業が完成 しました。1994年、本所の決議に応じ、「史籍自動化データベース」という 名称を「漢籍全文データベース」に変更しました。そして1994年から、「漢 籍全文データベースプロジェクト」が展開し、中国伝統人文研究に関して重 要価値がある文献を収録しています。1995年に「漢籍データベース作業グ ループ」が設立され、2008年に名称が「漢籍データベース研究グループ」に 変更され、現在まで運営を続けています。</p>
+                            <p>1984年、情報科学研究所の謝清俊氏の提案をきっかけに、歴史言語研究所所長・丁邦新氏の支持を得て、毛漢光氏の担当の下、多くの研究員が参加しての「史籍自動化」プロジェクトが始まりました。それからの10年間で、『二十五史』と39種類の古典籍、計4800万字のデータベースが完成しました。1994年には、本所の決議によって、「史籍データベース」という名称が「漢籍全文データベース」に変更されました。そして、1994年の「漢籍全文データベースプロジェクト」により、中国の伝統的な人文研究の中で重要な価値を持つ文献が収録されました。1995年には、「漢籍データベース作業グループ」が設立、2008年には名称が「漢籍データベース研究グループ」に変更され、現在まで運営を続けています。</p>
                                 
-                            <p>この数年間で、漢籍データベースが改良され続けています。1995年、ウェブ 版「漢籍電子文献=瀚典全文検索システム」がオンライン化され、2006年に
-                                「漢籍電子文献3.0テスト版」に改良されました。その後2008年に現在の「漢
-                                籍電子文献データベース」が使われ始め、外国からの有料アクセスも可能に
-                                17
-                                なりました。2009年に、国内団体と個人の無料登録が開始されました。新し いデータベースでは、古籍コンテンツの数が増える一方で、「画像参照」・
-                                「キャプション(画像の説明文)」・「接辞分析」・「パールグローイング (ドキュメントから検索)」・「人・地・時・事・物などの固有表現抽出」
-                                などの機能が増え続けています。2019年年末までに、歴代の古籍1000点以 上、合計7億字あまりが当データベースに収録されました。この件について は、国内外に多くの利用者がいらっしゃり、このデータベースをデジタル人 文科学研究に便利なツールとして提供し続けています。</p>
+                            <p>この漢籍データベースは、長年に渡って改良が続けられてきました。1995年には、ウェブ版「漢籍電子文献＝瀚典全文検索システム」がオンライン化され、2006年に「漢籍電子文献3.0テスト版」に改良されました。その後、2008年に現在の「漢籍電子文献データベース」の使用が始まり、海外からの有料アクセスも可能になりました。2009年には、国内における団体および個人の無料登録が開始されました。新しいデータベースでは、古典籍のコンテンツ数が増える一方、「画像参照」、「キャプション（画像の説明文）」、「接辞分析」、「パールグローイング（ドキュメント検索）」、「人・場所・時間・事・物などの固有名詞抽出」といった機能が増え続けています。2019年年末までに、歴代の古典籍は1000点以上、合計7億字あまりがデータベースに収録されました。本データベースは、国内外に多くの利用者を有し、デジタル人文科学研究における有用なツールとなっています。</p>
 
                             <div class="other-links">
                                 <span>関連リンク：</span>
