--- a/jp/working-groups/world-history.html
+++ b/jp/working-groups/world-history.html
@@ -286,9 +286,9 @@
                                 <p>オーガナイザー・担当者：<span><a href="../people/research-fellows-info01.html" title="プロフィール">藍弘岳</a></span></p>
                             </div>
 
-                            <p>世界史という専門領域の中で、研究者達の興味の範囲はそれぞれですが、そ の中で共通の特徴があるといえば、比較的な研究に基づくことです。これに 関して学界の意見は一致します。世界史の研究、特に漢語圏の歴史につい て、「他者の歴史」と見られることではなく、人類の共同遺産として見上げ て相互に参照するべきことと思います。従って、世界史の研究方向とは、中 国史の中でない物だけに集中することではありません。様々な研究テーマの 中から、中国史・台湾史における共通的な関心があり、互いに相乘效果があ るテーマを選ぶべきです。さらに一歩、本院における非中国史専門分野の新 入・先任の同僚研究者達が全員、自分の文化背景を上手く駆使し、⻄洋の学 者の研究とは違う新しい概念を発案するべきです。</p>
+                            <p>いわゆる世界史とは、その実際の内容は研究者各自の興味によってそれぞれですが、共通の特徴を挙げれば、比較研究に基づいていることであり、これは学界の共通認識となっています。世界史研究は、漢字語圏の歴史にとっては、「他者の歴史」ではなく、人類の共同遺産としての相互思索であるべきです。したがって、世界史研究は、中国史にない課題を専ら検討することではなく、様々な研究テーマの中から、中国史あるいは台湾史と共通し、かつ互いに相乗效果のあるテーマを見つけるべきです。さらに言えば、本院に新しく入った、または旧来から在籍する、非中国史専門の研究員らは、自身の文化背景を上手く駆使して新しい概念を発案し、それによって欧米出身の学者らによる研究との差異化を図っていくべきでしょう。</p>
 
-                            <p>本所世界史研究室の初期研究方向とは、「文明論の視点からヨーロッパの古 代・近現代文化史に関しての検討」という課題を設定し、当室の研究者達が この課題をめぐり、具体的な研究テーマを提出することになります。</p>
+                            <p>本所世界史研究室の初期における研究の方向性は、「文明論の視点から見たヨーロッパの古代および近現代文化史に関する検討」でした。当室の研究者達は、このテーマを基に、各グループにおける具体的な研究テーマを策定しています。</p>
 
                             <!-- 沒有連結時隱藏
                             <div class="other-links">
