--- a/jp/academic-resources/fu-ssu-nien-library.html
+++ b/jp/academic-resources/fu-ssu-nien-library.html
@@ -266,10 +266,9 @@
                         <section id="box-academic">
                             <div id="academic-main">
                                 <img class="pic_fsnl" src="../../images/pic_fu-ssu-nien-library.jpg" alt="傅斯年図書館外觀">
-                                <p>当館の名称「傅斯年図書館」は、元中央研究院院⻑の胡適氏により命名され ました。当館は傅斯年氏による、歴史言語研究所の創立の功績を記念するた めに名付けられました。1961年6月に落成し、開館しました。館内所蔵図書資 料は、歴史・言語・考古・人類学・古文字などのテーマを含め、約90万冊 (件)がありますので、国際的にも重要な漢学図書館と言えます。</p>
-                                <p>所蔵の図書資料は普通図書と特別蔵書の二種類があります。普通図書には、 近現代各言語で書かれた出版品・雑誌・マイクロフィルム・デジタルデータ ベースなどが含まれ、特別蔵書には古典籍善本・金石拓本・俗文学資料・アー カイブや公文書・少数⺠族文書などが含まれます。
-                                </p>
-                                <p>当館所蔵の中で最も特徴的な書籍とは、明清以前の古典籍善本図書4万冊以上 と言えます。この中には、数多くの珍しい秘本・各色宋元明清刊本・名人の 筆跡などの貴重な文献が収蔵されています。北宋刊本の『史記』・南宋刊蜀 本の『南華真経』・南宋刊本の『文苑英華』を合わせて「鎮館三宝」と称します。2011年、傅斯年氏による本所成立と研究の功績推進を表彰するため に、当館内に「傅斯年記念室」が設置されました。</p>
+                                <p>当館の名称「傅斯年図書館」は、傅斯年氏による歴史言語研究所創立の功績を記念するため、元中央研究院院長の胡適氏により命名されました。本館は、1961年6月に落成、開館しました。館内の所蔵図書資料は、歴史、言語、考古、人類学、古文字などのテーマを含め、約90万冊（点）あり、国際的にも重要な漢学図書館であると言えます。</p>
+                                <p>所蔵されている図書資料は、普通図書と特別蔵書の二種類があります。普通図書には、近現代各言語で書かれた出版品、雑誌、マイクロフィルム、デジタルデータベースなどが含まれ、特別蔵書には、古典籍善本、金石拓本、俗文学資料、公文書、少数民族文書などが含まれます。</p>
+                                <p>当館の所蔵の中で最も特徴的な書籍として、明清以前の古典籍善本4万冊余りがあります。この中には、数多くの珍しい秘本、各種の宋元明清刊本、名家の手稿などの貴重な文献が収蔵されています。北宋刊本の『史記』、南宋刊蜀本の『南華真経』、南宋刊本の『文苑英華』は、合わせて「鎮館三宝」と称されます。2011年には、傅斯年氏による本所設立と研究推進の功績を顕彰するため、当館内に「傅斯年記念室」が設置されました。</p>
                             </div><!--//end #bulletin-main-->
 
                             <div class="other-links">
