--- a/jp/working-groups/archaeology-of-taiwan-and-southeast-asia.html
+++ b/jp/working-groups/archaeology-of-taiwan-and-southeast-asia.html
@@ -286,12 +286,11 @@
                                 <p>オーガナイザー・担当者：<span><a href="../people/research-fellows-info01.html" title="プロフィール">趙金勇</a></span></p>
                             </div>
 
-                            <p>当研究室の研究範囲は台湾を中心として隣接の地域にも含まれます。初期の段階で設定された研究テーマ:地域的な史前文化と時空の組み立ておよび充
-                                実・史前住⺠生活様式の再現・史前考古と口承史の研究・台湾歴史考古学と 近現代社会論議・原住⺠史の研究や原住⺠文化財の保存と維持などのテーマ も含まれています。そして、これらの研究テーマは台湾全域の人類活動史の 構成をめぐり、考古学の研究に基づき、他の学科にもつなげていくために、 台湾人類活動史の視野を広げるものであります。</p>
+                            <p>当研究室の研究範囲は、台湾を中心とし、その隣接地域を含むものです。初期の段階で設定された研究テーマには次のようなものがありました。地域的な先史文化における時空間のフレームワークの構築およびその充実、先史時代の人々の生活様式の再現、先史考古学と口承史の研究、台湾の歴史考古学及び近現代社会に関する議論、原住民史研究や原住民文化財の保存と維持など。こうした研究テーマは、台湾地域の人類活動史の構築をめぐり、考古学研究と他の研究領域をつなげ、台湾人類活動史の視野を広げるものであります。</p>
 
-                            <p>以上の目標を達成するため、本研究室で遺跡文物・文献データベースを構築 する予定があります。当データベースは、研究者達の研究目的で利用できる 一方、インターネットで国内外の関連学術機構にもリンクするため、情報共 有・システム活用を目指しています。</p>
+                            <p>以上の目標を達成するため、本研究室では、遺跡文物・文献データベースを構築しており、当データベースは、所内研究員の利用に供するほか、インターネットによって国内外の関連学術機関とも連結し、情報の検索や共有を図っています。</p>
                                 
-                            <p>中央研究院が推進していた東南アジア地域研究プロジェクトとともに、本所 の考古グループに東南アジア考古研究を発展させる、良いタイミングとなり ます。すなわち、台湾考古学の研究範囲を広め、研究問題を解明する時期と なります。現在、基礎的な資料が大量に収集され、目録も編成されていま す。つまり、「台湾と東南アジア関係」という具体的な研究テーマを目標と し、多面にわたる研究方法や地域から、専門研究を行うこととなり、最終的 にテーマ統合を達成するものであります。</p>
+                            <p>中央研究院が推進する東南アジア地域研究プロジェクトと同時期に、本所の考古グループでも東南アジア考古学研究を発展させてきました。それにより、台湾考古学の研究範囲をより広げ、研究テーマの再検討を行いました。現在、すでに大量の基礎的な資料が収集され、目録が編成されています。「台湾と東南アジアの関係」という研究テーマに関し、多面的な研究手法や多地域における各自の専門的研究を推進することで、最終的に本研究課題が総合的なものとなることが期待されます。</p>
 
                             <div class="other-links">
                                 <span>関連リンク：</span>
