--- a/jp/working-groups/bronze-inscriptions.html
+++ b/jp/working-groups/bronze-inscriptions.html
@@ -286,13 +286,15 @@
                                 <!--<p>オーガナイザー・担当者：<span></span></p>-->
                             </div>
 
-                            <p>金文研究グループの目標は三つです:</p>
+                            <p>金文研究グループの目標は、以下の三つです。</p>
                                 
-                            <p>(一)、殷周時代の金文及び⻘銅器のデジタルデータベースを設置します。 この中には、金文の説明文・字形のコレクション・参考資料などを合わせた データベースと、⻘銅器の写真画像・関係研究(例えば、金石学家の人名典 拠ファイルや、出土した⻘銅器の時間・空間マップなど)を収録するデータ ベースも含まれます。データベースの設立を通じ、将来に向けての研究環境 を構築し、学者と一般ユーザーによる研究と学習の利便性を高めることを目 指します。</p>
+                            <p>（一）殷周時代の金文及び青銅器のデジタルデータベースの設置。この中には、金文の説明文、字形のコレクション、参考資料などを合わせたデータベース、青銅器の写真画像及び関連研究（例えば、金石学者の人名典拠ファイルや、出土した青銅器の時間・空間マップなど）を収録するデータベースが含まれます。データベースの設置を通じ、将来性ある研究環境を構築し、研究者や一般ユーザーによる研究と学習の利便性を高めることを目指します。</p>
 
-                            <p>(二)、⻑期に渡り安定した上古史研究環境を提供し、その上で、若い学者 達が⻘銅文明関係研究に参加することを促進。さらに、参加者達の研究論文 の質を高めます。</p>
+                            <p>（二）長期に渡り安定した上古史研究の環境を提供し、若い研究者達が青銅器文明に関する研究に参加することを促進します。さらに、参加研究員らの研究論文の質を高めます。</p>
 
-                            <p>(三)、本所と所外における、関連分野の研究者達への学術交流を促進。 現在、積極的に研究に参加している本所と所外の研究員は合計十数名であ り、同じく関連分野の院生と助手は、合計二十数名ぐらいです。それぞれが 大規模な研究プロジェクト・定期的な討論会・不定期な講演会やセミナーな どの学術活動を行っています。</p>
+                            <p>（三）本所内外における、関連分野の研究者らの学術交流の促進。</p>
+                            
+                            <p>現在、積極的に研究に参加している本所と所外の研究員は合計十数名であり、同じく関連分野の院生と助手は、合計二十数名です。それぞれが大規模な研究プロジェクトや定期的な討論会、不定期の講演会やセミナーなどの学術活動を行っています。</p>
 
                             <div class="other-links">
                                 <span>関連リンク：</span>
